local-k8s/manual/poc/poc-network-policies.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-color
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web-color
spec:
  replicas: 4
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: fabricioveronez/web-color:blue
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web-color
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-green
  namespace: web-color
spec:
  replicas: 4
  selector:
    matchLabels:
      app: web-green
  template:
    metadata:
      labels:
        app: web-green
    spec:
      containers:
        - name: web
          image: fabricioveronez/web-color:green
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-green
  namespace: web-color
spec:
  selector:
    app: web-green
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-color
  namespace: web-color
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: "blue.127.0.0.1.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: "green.127.0.0.1.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-green
                port:
                  number: 80
#
#---
#apiVersion: projectcalico.org/v3
#kind: NetworkPolicy
#metadata:
#  name: default-deny
#  namespace: default
#spec:
#  selector: all()
#  types:
#    - Ingress
#    - Egress

#---
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: nginx-policy
#  namespace: default
#spec:
#  podSelector:
#    matchLabels:
#      app: nginx
#  policyTypes:
#    - Ingress
#  ingress:
#    - from:
#        - podSelector:
#            matchLabels:
#              app: curl
#      ports:
#        - protocol: TCP
#          port: 80
